fix(terminal): unify terminal scrollbar styles with css variables

--- a/src/renderer/src/index.css
+++ b/src/renderer/src/index.css
@@ -74,6 +74,7 @@
 
   --uninstalled-card-bg-color: #ededed;
   --accent-bg-color: #212121;
+  --xterm-scrollbar-thumb-color: rgba(0, 0, 0, 0.1);
 }
 
 * {
@@ -84,6 +85,7 @@
 
 .dark {
   --uninstalled-card-bg-color: #303030;
+  --xterm-scrollbar-thumb-color: rgba(255, 255, 255, 0.1);
 }
 
 .bg-uninstalled {
@@ -94,25 +96,13 @@
   background: radial-gradient(circle at 50% 30%, var(--accent-bg-color), transparent 70%);
 }
 
-@media (prefers-color-scheme: dark) {
-  /* Xterm(Terminal) scroll bar style */
-  .xterm-viewport::-webkit-scrollbar-thumb {
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 10px;
-  }
-}
-
-@media (prefers-color-scheme: light) {
-  /* Xterm(Terminal) scroll bar style */
-  .xterm-viewport::-webkit-scrollbar-thumb {
-    background: rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-  }
-}
-
-/* Xterm(Terminal) scroll bar style */
 .xterm-viewport::-webkit-scrollbar {
   width: 5px;
+}
+
+.xterm-viewport::-webkit-scrollbar-thumb {
+  background: var(--xterm-scrollbar-thumb-color);
+  border-radius: 10px;
 }
 
 .draggable {
